0.13:
  add SUPPORT_DIR_REDIRECT in gatling_features.h

0.12:
  close ftp-uploaded files in cleanup() (Johannes Ziemke)
  fix some bizarre ftp races that caused assertion failures (Johannes Ziemke)
  look for theora in .ogg files and say they are video/ogg (requires
    SUPPORT_MIMEMAGIC)
  fix http ranges for Range: bytes=0-, would trigger 416 before
    (Sebastian Köhler)
  win7 does some new strange ioctl call when copying files; return error
    instead of dropping connection
  fix off-by-ones in http byte ranges

0.11:
  add proxy support to dl ($http_proxy and $ftp_proxy like libwww)
  setuid in the forkslave, too
  fix the symlink to directory entries (Olaf Dreesen)

0.10:
  add multi-ranges (only used by the Acrobat Reader plugin AFAIK)
  abstract out accept() deferment to libowfat (socket_deferaccept)
  add read-only SMB support
  add lame anti-DOS support (see README.antidos)
  sort the other way around in referer
  dl in http mode now supports cookies and sets the referer
  add SSH forwarding to SSL support (see README.tls)
  add matchiprange (see comment at top of matchiprange.c)
  fix a few CGI problems report by Andreas Stuehrk

0.9:
  add /server-status
  request_done, socket_error and cgiproxy_read0 now print the number of
    received and sent bytes in this request, to make traffic accounting
    for CGIs and broken downloads possible
  you can now say -C+x and then all executable files will be run as CGI.
    Also works for index.html.  Please note that this is dangerous in
    case you copy or serve files off a FAT or similar filesystem, where
    Linux per default marks every file executable.  That's why gatling
    has a simple sanity check that only allows scripts starting with #!
    or ELF binaries.
  add "bench", a small benchmark util in the spirit of apachebench
  make bzip2 support optional (and disable it per default)
  add Date header
  add MIME magic (will try to identify file type by looking at first bytes)